스크롤 조정 추가

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 
   <section class="content about">
     <div class="inner">
-      <div class="about_box">
+      <div class="about_box gs_reveal on">
         <div class="pic">
           <img src="./img/big/8.jpg" alt="">
         </div>
@@ -74,7 +74,7 @@
         </div>
       </div>
       <!-- about_box -->
-      <div class="is_about">
+      <div class="is_about gs_reveal">
         <h2>Is About</h2>
         <ul>
           <li class="con1">
@@ -117,10 +117,10 @@
         </ul>
       </div>
       <!-- is_about -->
-      <div class="about_with">
+      <div class="about_with ">
         <h2>about with</h2>
-        <article>
-          <div class="text_con">
+        <article class="gs_reveal fromLeft">
+          <div class="text_con ">
             <p>Our jeans are not designed to be used a few times and then thrown away. We cherish the well-worn and
               mended. Jeans that become a part of ourselves when worn a long time – a second skin. A pair of dry denim
               jeans is the materialized version of our values: No extra treatment or washes. Made with 100% organic
@@ -132,10 +132,10 @@
               provide the vigor and strength needed for Nudie Jeans’ future. <i class="mask_bg"></i></p>
           </div>
         </article>
-        <article>
+        <article  class="gs_reveal fromRight">
           
           <div>
-            <div class="pic">
+            <div class="pic ">
               <img src="./img/about/about_with01.jpg" alt="">
             </div>
           </div>
@@ -149,7 +149,7 @@
               journey, and ultimately up to you to decide how far you want to take it.<i class="mask_bg"></i></p>
           </div>
         </article>
-        <article>
+        <article  class="gs_reveal fromLeft">
           <div class="pic">
             <img src="./img/about/about_with02.jpg" alt="">
             <i class="mask_bg"></i>
@@ -162,7 +162,7 @@
         </article>
       </div>
       <!-- about_with -->
-      <div class="Organization">
+      <div class="Organization gs_reveal">
         <h2>Organization</h2>
         <ul>
           <li>
