--- a/community.html
+++ b/community.html
@@ -6,10 +6,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Community</title>
-  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+
+  <!-- css -->
   <link rel="stylesheet" href="css/style.css">
 
+  <!-- js -->
+  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
   <script src="js/sub.js" defer></script>
+  <script src="js/community.js" defer></script>
+
 </head>
 
 <body>
@@ -50,228 +57,223 @@
   </header>
   <!-- header -->
   <section class="content community">
-    <div class="top_box">
+    <div class="visual on">
       <div class="pic">
         <img src="./img/multiple.jpg" alt="community image">
       </div>
       <div class="text_box">
-        <h1>COMMUNITY</h1>
+        <h2>COMMUNITY<i class="mask_bg"></i></h2>
         <p>
-          Welcome to our Help Center! Write your question to the right and hopefully your answer will appear. <br><br>
+          Welcome to our Help Center! Write your question to the right and hopefully your answer will appear. <i
+            class="mask_bg"></i></p>
+        <p>
           Or just scroll down to the Board.
+          <i class="mask_bg"></i>
         </p>
       </div>
     </div>
-    <!--// top_box -->
-    <div class="inner">
-      <div class="journal_list">
-      <h2>Journal</h2>
-      <ul>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#none">
-            <div class="pic">
-              <img src="./img/community/journal01.jpg" alt="">
-            </div>
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
+    <!--// visual -->
+    <div class="journal_list">
+      <div class="inner">
+        <h2>Journal</h2>
+        <ul>
+          <li class="con1">
+            <a href="#none">
+              <div class="text_box">
+                <h3>Ashes To Ashes — The Berlin edit</h3>
+                <p>Editorial</p>
+              </div>
+              <div class="bg"></div>
+            </a>
+          </li>
+          <li class="con2">
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/community/journal01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Re-worked</h3>
+                <p>handmade by Maria Erixon Levin</p>
+              </div>
+            </a>
 
-        </li>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
+          </li>
+          <li class="con3">
+            <a href="#none">
+              <div class="text_box">
+                <h3>We keep creating material change</h3>
+                <p>Denimopedia</p>
+              </div>
+              <div class="bg"></div>
+            </a>
 
-        </li>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
+          </li>
+          <li class="con4">
+            <a href="#none">
+              <div class="text_box">
+                <h3>It is happening again! </h3>
+                <p>We keep creating material change</p>
+              </div>
+              <div class="bg"></div>
+            </a>
 
-        </li>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
+          </li>
+          <li class="con5">
+            <a href="#none">
+              <div class="text_box">
+                <h3>Unbound by genre: the black denim silhouette</h3>
+                <p>Editorial</p>
+              </div>
+              <div class="bg"></div>
+            </a>
+          </li>
+          <li class="con6">
+            <a href="#none">
+              <div class="text_box">
+                <h3>#Whomademyclothes?</h3>
+                <p>Sustainability</p>
+              </div>
+              <div class="bg"></div>
+            </a>
 
-        </li>
-        <li>
-          <a href="#none">
-            <div class="pic">
-              <img src="./img/community/journal02.jpg" alt="">
-            </div>
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#none">
-            <div class="pic">
-              <img src="./img/community/journal03.jpg" alt="">
-            </div>
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#none">
-            <div class="pic">
-              <img src="./img/community/journal04.jpg" alt="">
-            </div>
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a href="#none">
-            <div class="text_box">
-              <h3>Lorem ipsum dolor sit amet.</h3>
-              <p>Lorem, ipsum dolor.</p>
-            </div>
-          </a>
-        </li>
-      </ul>
+          </li>
+          <li class="con7">
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/community/journal02.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Closing Loops</h3>
+                <p>Closing Loops</p>
+              </div>
+            </a>
+          </li>
+          <li class="con8">
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/community/journal03.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Uncommon People — The Munich edit</h3>
+                <p>Editorial</p>
+              </div>
+            </a>
+          </li>
+          <li class="con9">
+            <a href="#none">
+              <div class="text_box">
+                <h3>The Galeries Repair Shop</h3>
+                <p>a supersized jack-in-the-box</p>
+              </div>
+              <div class="bg"></div>
+            </a>
+          </li>
+          <li class="con10">
+            <a href="#none">
+              <div class="pic">
+                <img src="./img/community/journal04.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem, ipsum dolor.</p>
+              </div>
+            </a>
+          </li>
+          <li class="con11">
+            <a href="#none">
+              <div class="text_box">
+                <h3>Lorem ipsum dolor sit amet.</h3>
+                <p>Lorem, ipsum dolor.</p>
+              </div>
+              <div class="bg"></div>
+            </a>
+          </li>
+          <li class="con12">
+            <a href="#none">
+              <div class="text_box">
+                <h3>The Repair Shop is now open </h3>
+                <p>New Zealand </p>
+              </div>
+              <div class="bg"></div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
-    <!-- journal_list -->
-
+    <!--// journal_list -->
     <div class="faq">
-      <h2>Faq</h2>
-      <ul>
-        <li>
-          <div class="question">
-           <span>01</span>
-           <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <p class="answer">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
-          </p>
-        </li>
-        <li>
-          <div class="question">
-           <span>02</span>
-           <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <p class="answer">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
-          </p>
-        </li>
-        <li>
-          <div class="question">
-           <span>03</span>
-           <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <p class="answer">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
-          </p>
-        </li>
-        <li>
-          <div class="question">
-           <span>04</span>
-           <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <p class="answer">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
-          </p>
-        </li>
-        <li>
-          <div class="question">
-           <span>05</span>
-           <p>Lorem ipsum dolor sit amet.</p>
-          </div>
-          <p class="answer">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
-          </p>
-        </li>
-      </ul>
+      <div class="inner">
+        <h2>Faq</h2>
+        <ul>
+          <li>
+            <div class="question">
+              <span>01</span>
+              <p>Will you be getting more stock?</p>
+              <span class="faqIcon"></span>
+              <i class="mask_bg"></i>
+            </div>
+            <p class="answer">
+              We do our best to restock popular items however, in the case of limited editions this is not always
+              possible. We currently don't have a 'notify me'-service available to let you know when an item is back in
+              stock. But if you would like to ask about a product, size or color that is not shown, please contact our
+              customer care team.
+            </p>
+          </li>
+          <li>
+            <div class="question">
+              <span>02</span>
+              <p>Are your jeans unisex?</p>
+              <span class="faqIcon"></span>
+              <i class="mask_bg"></i>
+            </div>
+            <p class="answer">
+              Yes! All our fits are unisex. However, we have launched some fits that are specifically designed for
+              women, these fits are Hightop Tilde, Breezy Britt, Straight Sally, Lofty Lo and Clean Eileen. That said,
+              these still work great for guys as well.
+            </p>
+          </li>
+          <li>
+            <div class="question">
+              <span>03</span>
+              <p>What leather do you use?</p>
+              <span class="faqIcon"></span>
+              <i class="mask_bg"></i>
+            </div>
+            <p class="answer">
+              The leather used for accessories is of European origin, while the leather used for jackets is of Indian
+              and Middle Eastern origin.We have required our suppliers to limit the souring of raw hides from certain
+              areas/countries. For our leather accessories, we only use vegetable tanned leather.
+            </p>
+          </li>
+          <li>
+            <div class="question">
+              <span>04</span>
+              <p>Can I purchase a gift card online?</p>
+              <span class="faqIcon"></span>
+              <i class="mask_bg"></i>
+            </div>
+            <p class="answer">
+              At the moment this is not possible, but we're working on being able to offer this service in the future!
+            </p>
+          </li>
+          <li>
+            <div class="question">
+              <span>05</span>
+              <p>Do you ship to my country?</p>
+              <span class="faqIcon"></span>
+              <i class="mask_bg"></i>
+            </div>
+            <p class="answer">
+              We ship to over 50 countries worldwide. Your current shipping destination is shown inside the menu on the
+              bottom left of our website.
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="sns">
-      <h2>Sns</h2>
-      <ul>
-        <li>
-          <a href="#">
-            <div class="pic">
-              <img src="./img/community/sns01.jpg" alt="">
-            </div>
-            <span>Facebook</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <div class="pic">
-              <img src="./img/community/sns02.jpg" alt="">
-            </div>
-            <span>Insta</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <div class="pic">
-              <img src="./img/community/sns03.jpg" alt="">
-            </div>
-            <span>Youtube</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <div class="pic">
-              <img src="./img/community/sns04.jpg" alt="">
-            </div>
-            <span>Twitter</span>
-          </a>
-        </li>
-      </ul>
-    </div>
-
-      <div class="table">
+    <!--// faq  -->
+    <div class="table">
+      <div class="inner">
         <h2>Board</h2>
         <table>
           <caption class="h">회원 자유 게시판</caption>
@@ -356,7 +358,7 @@
           <p class="numbers">
             <a href="#" class="on">1</a>
             <a href="#">2</a>
-       
+
           </p>
           <a href="#" class="next">
             <i class="fas fa-angle-right"></i>
@@ -367,9 +369,8 @@
         </div>
         <!-- pagination -->
       </div>
-      <!--// table -->
     </div>
-    <!--// inner -->
+    <!--// table -->
   </section>
   <footer id="footer_sub">
     <div class="inner">
