--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>New fit! — Tuff Tony</h3>
+                <p>Collections</p>
               </div>
             </a>
           </li>
@@ -277,8 +277,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>New Fit: Gritty Jackson</h3>
+                <p>Collections</p>
               </div>
             </a>
           </li>
@@ -289,8 +289,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>Ready Yourselves! Re-use Drop 11 is Soon Live on nudiejeans.com</h3>
+                <p>Collections</p>
               </div>
             </a>
           </li>
@@ -301,8 +301,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>Rainbow Mixtape / Nudie Jeans Fall 2021</h3>
+                <p>Collections</p>
               </div>
             </a>
           </li>
@@ -313,8 +313,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>Re-use News – This Just In!</h3>
+                <p>Sustainability</p>
               </div>
             </a>
           </li>
@@ -325,8 +325,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>A New Batch of Re-use Jeans is Now Live on nudiejeans.com</h3>
+                <p>Collections</p>
               </div>
             </a>
           </li>
@@ -337,8 +337,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>Re-use #14 is now available online</h3>
+                <p>Collections</p>
               </div>
             </a>
           </li>
@@ -349,8 +349,8 @@
                 <i class="mask_bg"></i>
               </div>
               <div class="text_box">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit.</p>
+                <h3>New collection: The art of </h3>
+                <p>Collections</p>
               </div>
             </a>
           </li>
@@ -362,26 +362,21 @@
       <div class="inner">
         <h2>Bake Your Own</h2>
         <div class="left">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur facere porro aut ipsa rem numquam
-            voluptatibus repellendus iusto. Neque ut provident consectetur itaque iste doloribus aliquid qui quos, quia
-            corporis!</p>
+          <h3>Denim is always an option,</h3>
+          <p>Later this fall, we introduce a new fit called Rad Rufus. As an exclusive preview, we opened a pop-up pizzeria and invited ten stores worldwide to bake their own. We supplied each store with a menu of premium ingredients, and let them get creative with it.</p>
           <ul>
-            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
-            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
-            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
-            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
-            <li><i class=" far fas fa-check-circle"></i> Lorem ipsum dolor sit amet.</li>
+            <li><i class=" far fas fa-check-circle"></i> THE DENIM STORE</li>
+            <li><i class=" far fas fa-check-circle"></i> PEGGS SON</li>
+            <li><i class=" far fas fa-check-circle"></i> MEADOW</li>
+            <li><i class=" far fas fa-check-circle"></i> WEDRESSFAIR</li>
+            <li><i class=" far fas fa-check-circle"></i> CRAMER CO</li>
           </ul>
         </div>
         <!-- left -->
         <div class="right">
-          <h3>Lorem ipsum dolor sit.</h3>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/v70mU5jUge8?controls=0"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <h3>Bake Media</h3>
+         <video src="./video/bake.mp4" muted controls></video>
+          <p>Ten stores, ten unique versions of Rad Rufus, limited to 25 pieces per store.</p>
         </div>
         <!--// right  -->
         <div class="icon_list">
@@ -389,33 +384,33 @@
             <li>
               <i class="far fa-check-circle"></i>
               <div class="text_box">
-                <span>Lorem.</span>
-                <h3>Lorem, ipsum.</h3>
-                <p>Lorem, ipsum.</p>
+                <span>Redcast.</span>
+                <h3>Organic cotton</h3>
+                <p>Made In Italy</p>
               </div>
             </li>
             <li>
               <i class="far fa-check-circle "></i>
               <div class="text_box">
-                <span>Lorem.</span>
-                <h3>Lorem, ipsum.</h3>
-                <p>Lorem, ipsum.</p>
+                <span>Replica</span>
+                <h3>Selvage denim</h3>
+                <p>Made In Italy</p>
               </div>
             </li>
             <li>
               <i class="fas fa-hourglass-end "></i>
               <div class="text_box">
-                <span>Lorem.</span>
-                <h3>Lorem, ipsum.</h3>
-                <p>Lorem, ipsum.</p>
+                <span>Status.</span>
+                <h3>Dry 12.5 oz</h3>
+                <p>Made In Italy.</p>
               </div>
             </li>
             <li>
               <i class="far fa-bookmark "></i>
               <div class="text_box">
-                <span>Lorem.</span>
-                <h3>Lorem, ipsum.</h3>
-                <p>Lorem, ipsum.</p>
+                <span>New fit.</span>
+                <h3>Rad Rufus</h3>
+                <p>25 pairs</p>
               </div>
             </li>
           </ul>
@@ -430,10 +425,8 @@
           <div class="mask01"></div>
           <div class="mask02"></div>
           <div class="text_box">
-            <h3>Lorem, ipsum.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto explicabo porro aspernatur
-              consequatur velit dolores soluta excepturi ratione repudiandae repellendus, et suscipit eum obcaecati sed
-              eos omnis provident nemo deleniti!</p>
+            <h3>Free repairs forever</h3>
+            <p>Our jeans are meant to be worn a lot. We use only high quality fabrics and the sewing is top class. But at the same time, denim is not armor. The more you wear your jeans, the closer they get to that rainy day when a rip occurs. </p>
             <a href="#none" class="repair_open">view more</a>
           </div>
         </div>
@@ -446,7 +439,7 @@
                 <div class="pic">
                   <img src="./img/main/repair_list01.jpg" alt="">
                 </div>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Recycling cotton fibers is one way</p>
               </a>
             </li>
             <li>
@@ -454,7 +447,7 @@
                 <div class="pic">
                   <img src="./img/main/repair_list02.jpg" alt="">
                 </div>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Find your closest Repair Shop</p>
               </a>
             </li>
             <li>
@@ -462,7 +455,7 @@
                 <div class="pic">
                   <img src="./img/main/repair_list03.jpg" alt="">
                 </div>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>Repair Partners.</p>
               </a>
             </li>
           </ul>
@@ -480,32 +473,20 @@
           </h3>
         </div>
         <div class="island_con">
-          <p class="title">Lorem, ipsum dolor.</p>
+          <p class="title">ISLAND LIFE</p>
           <div class="island_slider">
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
-                <h3>Lorem, ipsum.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quod odit labore nostrum debitis
-                  iusto blanditiis? Sed enim dignissimos amet optio praesentium, saepe, voluptates accusamus reiciendis
-                  neque non, minus numquam.
+                <h3>WEEVER ISLAND.</h3>
+                <p>LIsland life is whatever you make of it: a place for recreation or adventure. Pitch your tent wherever you please, accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not go for a swim.
                 </p>
               </li>
               <li class="swiper-slide">
-                <h3>Lorem, ipsum.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quod odit labore nostrum debitis
-                  iusto blanditiis? Sed enim dignissimos amet optio praesentium, saepe, voluptates accusamus reiciendis
-                  neque non, minus numquam.
-                </p>
-              </li>
-              <li class="swiper-slide">
-                <h3>Lorem, ipsum.</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat quod odit labore nostrum debitis
-                  iusto blanditiis? Sed enim dignissimos amet optio praesentium, saepe, voluptates accusamus reiciendis
-                  neque non, minus numquam.
+                <h3>THE VOYAGER</h3>
+                <p>No one is an island entirely on their own. But sometimes, we need to disconnect, venture out into uncharted waters and seek adventure where it presents itself.
                 </p>
               </li>
             </ul>
-
           </div>
           <div class="island-prev">
             <i class="fas fa-arrow-left"></i>
@@ -513,11 +494,7 @@
           <div class="island-next">
             <i class="fas fa-arrow-right"></i>
           </div>
-
         </div>
-
-
-
       </div>
     </section>
     <!--// island -->
