--- a/media.html
+++ b/media.html
@@ -51,7 +51,7 @@
   <!-- header -->
 
   <section class="content media">
-    <div class="visual">
+    <div class="visual on">
       <div class="text_box">
         <h2>WE'RE NUDIE JEANS</h2>
         <p>media</p>
