--- a/gallery.html
+++ b/gallery.html
@@ -6,8 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallery</title>
-  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+
+  <!-- css -->
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- js -->
+  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
   <script src="js/sub.js" defer></script>
   <script src="js/gallery.js" defer></script>
@@ -52,23 +59,23 @@
   <!-- header -->
 
   <section class="content gallery">
-    <div class="visual">
+    <div class="visual on">
       <div class="text_con">
         <div class="text_box">
-          <h2>Nudie Jeans Gallery</h2>
-          <p>Our Re-use concept is pretty straightforward: handed-in Nudie Jeans, washed, repaired and sold again as second-hand. Not only is this a great way to do the planet a favor, you’ll also take the short cut to a unique garment that tells a story. These sell out fast, so if you miss your chance, you can always</p>
+          <h2>Nudie Jeans Gallery <i class="mask_bg"></i></h2>
+          <p>Our Re-use concept is pretty straightforward: handed-in Nudie Jeans, washed, repaired and sold again as second-hand. Not only is this a great way to do the planet a favor, you’ll also take the short cut to a unique garment that tells a story. These sell out fast, so if you miss your chance, you can always<i class="mask_bg"></i></p>
         </div>
-        <i></i>
+       
       </div>
     </div>
     <!--// visual -->
     <div class="title_gallery">
       <div class="inner">
-        <div class="con">
+        <div class="con show fromLeft">
           <div class="left">
             <div class="img">
               <img src="./img/gallery/intro01.jpg" alt="">
-             
+              <i class="mask_bg"></i>
             </div>
             <i class="t_bg"></i>
           </div>
@@ -80,7 +87,7 @@
             </div>
           </div>
         </div>
-        <div class="con">
+        <div class="con show fromRight">
           <div class="left">
             <div class="text_box">
               <h2>Rebirth<i class="mask_bg"></i></h2>
@@ -90,6 +97,7 @@
           <div class="right">
             <div class="img">
               <img src="./img/gallery/intro02.jpg" alt="">
+              <i class="mask_bg"></i>
             </div>
             <i class="t_bg"></i>
           </div>
