--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     <div class="inner">
       <div class="about_box gs_reveal on">
         <div class="pic">
-          <img src="./img/big/8.jpg" alt="">
+          <img src="./img/about/visual.jpg" alt="about main image">
         </div>
         <div class="text_box">
           <h1>About<i class="mask_bg"></i></h1>
