--- a/community.html
+++ b/community.html
@@ -59,7 +59,7 @@
   <section class="content community">
     <div class="visual on">
       <div class="pic">
-        <img src="./img/multiple.jpg" alt="community image">
+        <img src="./img/community/multiple.jpg" alt="community image">
       </div>
       <div class="text_box">
         <h2>COMMUNITY<i class="mask_bg"></i></h2>
