--- a/index.html
+++ b/index.html
@@ -214,6 +214,11 @@
     <section id="Sustainability">
       <h2>Sustainability</h2>
       <div class="inner">
+        <div class="Sustain_box">
+          <h3>
+            Here Is What You Need
+          </h3>
+        </div>
         <div class="Sustainability_con">
           <div class="s_con">
             <div class="Sustainability_slider">
