--- a/join.html
+++ b/join.html
@@ -83,7 +83,7 @@
     <div class="inner">
       <div id="cont" class="cont">
         <div class="left">
-          <img src="./img/big/join.jpg" alt="">
+          <img src="./img/join/join.jpg" alt="join main image">
         </div>
         <div class="right">
           <h1>Join Us</h1>
